--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web</title>
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/d1911b889d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
-                <li><button class="btn-primary">Hire Me</button></li>
+                <li><button class="btn-primary"><i class="fa-solid fa-road-lock"></i> Hire Me</button></li>
             </ul>
         </nav>
 
@@ -25,8 +26,8 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-pera">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
                     because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile" src="images/hardy.png" alt="">
 
@@ -161,7 +162,7 @@
             </div>
             </div>
             <div class="download-cv">
-                <button class="btn-primary">DOWNLOAD CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-user-doctor"></i> DOWNLOAD CV</button>
             </div>
 
         </section>
